# fin_terminal

./: .gitignore  Cargo.toml  README.md  added_tresury_commodity.md  ecosystem.config.cjs  fix_cargo_build.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
Documentation/: DESIGN.md  TROUBLESHOOTING.md  UI_DESIGN.md
e2e/: app.spec.ts
frontend/: app.js  app.ts  index.html  styles.css  terminal.ts  types.ts  utils.ts
frontend/__tests__/: rendering.test.ts  utils.test.ts
src/: lib.rs  main.rs  models.rs
src/clients/: bonds.rs  commodities.rs  mod.rs  treasury.rs  yahoo.rs
src/handlers/: api.rs
tests/: api_tests.rs
